--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 393,
+   "execution_count": 451,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3825 739\n"
+     ]
+    }
+   ],
    "source": [
     "biog = pd.read_csv(\"biodegradable_a.csv\", sep=\",\")\n",
     "\n",
@@ -35,6 +43,14 @@
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=0)\n",
     "\n",
     "X_cols = biog.columns[0:41]\n",
+    "\n",
+    "countRB = 0\n",
+    "countNRB = 0\n",
+    "for i in y:\n",
+    "    if(i == \"RB\"): countRB += 1\n",
+    "    elif(i == \"NRB\"): countNRB += 1\n",
+    "\n",
+    "print(countRB, countNRB)\n",
     "\n",
     "# pd.DataFrame(X, columns=X_cols)"
    ]
@@ -48,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 394,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 452,
    "metadata": {},
    "outputs": [
     {
@@ -1149,6 +1165,7 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "import sys\n",
     "\n",
     "\n",
     "def gaussian(dsts):\n",
@@ -1166,6 +1183,10 @@
     "    accsGaus = []\n",
     "    accsWeig = []\n",
     "    accs = []\n",
+    "\n",
+    "    bestMCC = sys.float_info.min\n",
+    "    bestK = 0\n",
+    "    bestWeight = \"\"\n",
     "\n",
     "    for k in range(2, 10, 2):\n",
     "        knn = KNeighborsClassifier(n_neighbors=k, weights=gaussian)\n",
