--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -243,23 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.06515055897111045\n",
-      "Feature:  C | Importance:  0.042837417398787964\n",
-      "Feature:  F03 | Importance:  0.037336856242342245\n",
-      "Feature:  SdssC | Importance:  0.10898083479545347\n",
-      "Feature:  LOC | Importance:  0.05249325274590612\n",
-      "Feature:  SM6_L | Importance:  0.05003847550262338\n",
-      "Feature:  F03_CO | Importance:  0.04443213381582762\n",
-      "Feature:  nN_N | Importance:  0.0660602055411445\n",
-      "Feature:  nHDon | Importance:  0.06647426145031446\n",
-      "Feature:  nX | Importance:  0.04008272820501105\n"
+      "Feature:  SpMax_L | Importance:  0.055857571939413174\n",
+      "Feature:  C | Importance:  0.050128922760401026\n",
+      "Feature:  F03 | Importance:  0.03488792737902144\n",
+      "Feature:  SdssC | Importance:  0.09539247080493612\n",
+      "Feature:  LOC | Importance:  0.07219331403599431\n",
+      "Feature:  SM6_L | Importance:  0.053800992051324735\n",
+      "Feature:  F03_CO | Importance:  0.052184415911967014\n",
+      "Feature:  nN_N | Importance:  0.06188192809771243\n",
+      "Feature:  nHDon | Importance:  0.06328129230549619\n",
+      "Feature:  nX | Importance:  0.044396389690381594\n"
      ]
     }
    ],
@@ -289,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'Mi', 'nArNO2', 'SpMax_A', 'B04',\n",
-      "       'C_026', 'nHDon'],\n",
+      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'nCIR', 'C_026', 'F02_CN',\n",
+      "       'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -328,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'NssssC', 'nCb', 'C', 'nO', 'F03', 'SdssC', 'Me', 'F02_CN',\n",
-      "       'nHDon'],\n",
+      "Index(['F01', 'F03', 'SdssC', 'LOC', 'SM6_L', 'SpPosA_B', 'N_073', 'TI2_L',\n",
+      "       'nHDon', 'nN'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +371,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 13, 14, 15, 17, 19, 26, 28, 32, 34]\n",
-      "[3, 5, 6, 7, 9, 10, 11, 16, 33, 34]\n"
+      "[11, 13, 14, 15, 19, 22, 32, 33, 34, 40]\n",
+      "[3, 10, 11, 13, 14, 21, 25, 30, 34, 37]\n"
      ]
     }
    ],
@@ -396,19 +396,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
     "selec_feat_indexes = [corr_index,\n",
     "                      rand_forest_index,\n",
     "                      step_for_index,\n",
-    "                      step_back_index]\n",
+    "                      step_back_index, \n",
+    "                      range(0, 41)]\n",
     "\n",
     "selec_feat_names = [\"Correlation\",\n",
     "                      \"Random Forest\",\n",
     "                      \"StepWise For\",\n",
-    "                      \"StepWise Back\"]"
+    "                      \"StepWise Back\", \n",
+    "                      \"No Feature Selection\"]"
    ]
   },
   {
@@ -421,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,22 +431,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# First Model"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "KNN"
+    "## KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -452,16 +448,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x000001CB4B828040>, 'f1Score': 0.9656377402446127}\n",
+      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9656377402446127}\n",
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.7711 with the hyperparameters {'neighbors': 12, 'weigths': 'distance', 'f1Score': 0.9665898617511521}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7797 with the hyperparameters {'neighbors': 6, 'weigths': <function gaussian at 0x000001CB4B828040>, 'f1Score': 0.966802562609202}\n",
+      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9680418361417781}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.8093 with the hyperparameters {'neighbors': 2, 'weigths': <function gaussian at 0x000001CB4B828040>, 'f1Score': 0.9715942028985506}\n",
+      "The best MCC we found was 0.7748 with the hyperparameters {'neighbors': 10, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9662790697674419}\n",
+      "Feature selection method: No Feature Selection\n",
+      "The best MCC we found was 0.6470 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9477351916376306}\n",
+      "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[122  38]\n",
-      " [ 11 838]]\n"
+      " [[127  33]\n",
+      " [ 43 806]]\n"
      ]
     }
    ],
@@ -476,7 +475,7 @@
     "    weights = np.exp(-(dsts**2)/kernel_width)\n",
     "    return weights\n",
     "\n",
-    "for i in range(4):\n",
+    "for i in range(5):\n",
     "    # print(i)\n",
     "    print(\"Feature selection method: \" + selec_feat_names[i])\n",
     "\n",
@@ -528,15 +527,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Forest"
+    "## Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -544,21 +544,24 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6267 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9456018518518517}\n",
+      "The best MCC we found was 0.6309 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9477311889718552}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6732 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9526558891454966}\n",
+      "The best MCC we found was 0.7006 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9559675550405563}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.5764 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9426462237365134}\n",
+      "The best MCC we found was 0.6804 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9547277936962751}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.5278 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9394107837687604}\n",
+      "The best MCC we found was 0.6451 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9502003434459072}\n",
+      "Feature selection method: No Feature Selection\n",
+      "The best MCC we found was 0.5858 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9451287793952967}\n",
+      "\n",
       "Confusion Matrix of best RF model\n",
-      " [[105  55]\n",
+      " [[ 99  61]\n",
       " [ 31 818]]\n"
      ]
     }
    ],
    "source": [
-    "for i in range(4):\n",
+    "for i in range(5):\n",
     "        bestMCC = sys.float_info.min\n",
     "        bestMCCParams = {\n",
     "                \"max_depth\": 0,\n",
@@ -603,15 +606,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bagging Classifier"
+    "## Bagging Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -623,12 +627,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6984 with the hyperparameters {'n_estimators': 8, 'f1Score': 0.9523248969982343}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7150 with the hyperparameters {'n_estimators': 8, 'f1Score': 0.9583815028901734}\n",
+      "The best MCC we found was 0.7454 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9632183908045977}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.5780 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9313609467455621}\n",
+      "The best MCC we found was 0.6782 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9479905437352246}\n",
+      "Feature selection method: No Feature Selection\n",
+      "The best MCC we found was 0.7635 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9653579676674365}\n",
+      "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[112  48]\n",
-      " [ 32 817]]\n"
+      " [[106  54]\n",
+      " [ 11 838]]\n"
      ]
     }
    ],
@@ -636,7 +643,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.ensemble import BaggingClassifier, BaggingRegressor\n",
     "\n",
-    "for i in range(4):\n",
+    "for i in range(5):\n",
     "    print(\"Feature selection method: \" + selec_feat_names[i])\n",
     "\n",
     "    X_train = X_train_processed[:, selec_feat_indexes[i]]\n",
