--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,23 +243,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.055857571939413174\n",
-      "Feature:  C | Importance:  0.050128922760401026\n",
-      "Feature:  F03 | Importance:  0.03488792737902144\n",
-      "Feature:  SdssC | Importance:  0.09539247080493612\n",
-      "Feature:  LOC | Importance:  0.07219331403599431\n",
-      "Feature:  SM6_L | Importance:  0.053800992051324735\n",
-      "Feature:  F03_CO | Importance:  0.052184415911967014\n",
-      "Feature:  nN_N | Importance:  0.06188192809771243\n",
-      "Feature:  nHDon | Importance:  0.06328129230549619\n",
-      "Feature:  nX | Importance:  0.044396389690381594\n"
+      "Feature:  SpMax_L | Importance:  0.056307935005619605\n",
+      "Feature:  C | Importance:  0.04371397062890876\n",
+      "Feature:  F03 | Importance:  0.042436564664557946\n",
+      "Feature:  SdssC | Importance:  0.11443572768982227\n",
+      "Feature:  LOC | Importance:  0.05350005457492731\n",
+      "Feature:  SM6_L | Importance:  0.04896687789858765\n",
+      "Feature:  F03_CO | Importance:  0.05319816637816076\n",
+      "Feature:  nN_N | Importance:  0.056160046993127925\n",
+      "Feature:  nHDon | Importance:  0.06188545535545137\n",
+      "Feature:  nX | Importance:  0.03886311408359229\n"
      ]
     }
    ],
@@ -289,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'nCIR', 'C_026', 'F02_CN',\n",
-      "       'nHDon', 'nX'],\n",
+      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'Psi_i_1d', 'C_026',\n",
+      "       'F02_CN', 'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -328,15 +328,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'F03', 'SdssC', 'LOC', 'SM6_L', 'SpPosA_B', 'N_073', 'TI2_L',\n",
-      "       'nHDon', 'nN'],\n",
+      "Index(['F01', 'nCb', 'nO', 'F03', 'SdssC', 'LOC', 'F03_CO', 'nArNO2', 'N_073',\n",
+      "       'nHDon'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +371,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 13, 14, 15, 19, 22, 32, 33, 34, 40]\n",
-      "[3, 10, 11, 13, 14, 21, 25, 30, 34, 37]\n"
+      "[11, 13, 14, 15, 19, 27, 32, 33, 34, 40]\n",
+      "[3, 6, 9, 10, 11, 13, 15, 19, 25, 34]\n"
      ]
     }
    ],
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -448,19 +448,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9656377402446127}\n",
+      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9656377402446127}\n",
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.7711 with the hyperparameters {'neighbors': 12, 'weigths': 'distance', 'f1Score': 0.9665898617511521}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9680418361417781}\n",
+      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9680418361417781}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7748 with the hyperparameters {'neighbors': 10, 'weigths': <function gaussian at 0x000001CB5145E700>, 'f1Score': 0.9662790697674419}\n",
+      "The best MCC we found was 0.7364 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9612044006948466}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.6470 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9477351916376306}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[127  33]\n",
-      " [ 43 806]]\n"
+      " [[123  37]\n",
+      " [ 41 808]]\n"
      ]
     }
    ],
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -544,19 +544,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6309 with the hyperparameters {'max_depth': 18, 'min_impurity_decrease': 0.05, 'f1Score': 0.9477311889718552}\n",
+      "The best MCC we found was 0.6368 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9482163406214038}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.7006 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9559675550405563}\n",
+      "The best MCC we found was 0.6996 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9560185185185185}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6804 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9547277936962751}\n",
+      "The best MCC we found was 0.6516 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9506314580941447}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6451 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9502003434459072}\n",
+      "The best MCC we found was 0.5960 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9458850056369786}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.5858 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9451287793952967}\n",
+      "The best MCC we found was 0.6060 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9472502805836138}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[ 99  61]\n",
-      " [ 31 818]]\n"
+      " [[107  53]\n",
+      " [ 24 825]]\n"
      ]
     }
    ],
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -627,15 +627,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6984 with the hyperparameters {'n_estimators': 8, 'f1Score': 0.9523248969982343}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7454 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9632183908045977}\n",
+      "The best MCC we found was 0.7436 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9608416130917592}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6782 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9479905437352246}\n",
+      "The best MCC we found was 0.6231 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9398584905660379}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.7635 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9653579676674365}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[106  54]\n",
-      " [ 11 838]]\n"
+      " [[118  42]\n",
+      " [ 26 823]]\n"
      ]
     }
    ],
@@ -680,6 +680,71 @@
     "\n",
     "bestBGCM = confusion_matrix(y_test, preds)\n",
     "print(\"\\nConfusion Matrix of best Bagging model\\n\", bestBGCM)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting and validating the best model \n",
+    "\n",
+    "(KNN | Step Back | Gaussian | k=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian Kernel: \n",
+      "\n",
+      "The MCC is:  0.8483190422946583\n",
+      "The Confusion Matrix is: \n",
+      " [[ 208   46]\n",
+      " [  16 1237]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# X_train = X_train_processed[:, step_back_index]\n",
+    "# X_test = X_test_processed[:, step_back_index]\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X_train_IVS)\n",
+    "\n",
+    "X_train_IVS_scaled = scaler.transform(X_train_IVS)\n",
+    "X_IVS_scaled = scaler.transform(X_IVS)\n",
+    "\n",
+    "imputerMean = SimpleImputer(missing_values = np.nan, strategy = \"mean\") \n",
+    "imputerMedian = SimpleImputer(missing_values = np.nan, strategy = \"median\") \n",
+    "\n",
+    "ct = ColumnTransformer(\n",
+    "    [('mean_imputer', imputerMean, useMean),\n",
+    "     ('median_imputer', imputerMedian, useMedian)]\n",
+    ")\n",
+    "\n",
+    "ct.fit(X_train_IVS_scaled)\n",
+    "\n",
+    "X_train_IVS_processed = ct.transform(X_train_IVS_scaled)\n",
+    "X_IVS_processed = ct.transform(X_IVS_scaled)\n",
+    "\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=2, weights=gaussian)\n",
+    "knn.fit(X_train_IVS_processed, y_train_IVS)\n",
+    "\n",
+    "preds = knn.predict(X_IVS_processed)\n",
+    "\n",
+    "mcc = matthews_corrcoef(y_IVS, preds)\n",
+    "cm = confusion_matrix(y_IVS, preds)\n",
+    "\n",
+    "print(\"Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian Kernel: \\n\")\n",
+    "print(\"The MCC is: \", mcc)\n",
+    "print(\"The Confusion Matrix is: \\n\", cm)"
    ]
   }
  ],
