added title to notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Second Home Assignment AA (2022/2023)\n",
+    "### Group: 59"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
