--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,15 +10,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "importar dados"
+    "Importar dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -68,15 +69,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check missing values"
+    "Verificar valores em falta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +132,7 @@
     "scaler.fit(X_train)\n",
     "\n",
     "X_train_scaled = scaler.transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
-    "\n",
-    "# df2 = pd.DataFrame(XscaledStS, columns=X_cols)\n",
-    "\n",
-    "# for i in range(len(XscaledStS[0])):\n",
-    "#     values = XscaledStS[:, i]\n",
-    "#     plt.hist(values)\n",
-    "#     plt.title(X_cols[i] + \" \" + str(i))\n",
-    "#     plt.show()\n",
-    "#     plt.close()"
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -151,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,15 +153,16 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "imputar dados"
+    "Imputar dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -252,23 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Feature:  SpMax_L | Importance:  0.056307935005619605\n",
-      "Feature:  C | Importance:  0.04371397062890876\n",
-      "Feature:  F03 | Importance:  0.042436564664557946\n",
-      "Feature:  SdssC | Importance:  0.11443572768982227\n",
-      "Feature:  LOC | Importance:  0.05350005457492731\n",
-      "Feature:  SM6_L | Importance:  0.04896687789858765\n",
-      "Feature:  F03_CO | Importance:  0.05319816637816076\n",
-      "Feature:  nN_N | Importance:  0.056160046993127925\n",
-      "Feature:  nHDon | Importance:  0.06188545535545137\n",
-      "Feature:  nX | Importance:  0.03886311408359229\n"
+      "Feature:  SpMax_L | Importance:  0.06690662116058628\n",
+      "Feature:  C | Importance:  0.051812353914987196\n",
+      "Feature:  F03 | Importance:  0.050345870873060146\n",
+      "Feature:  SdssC | Importance:  0.08674208590421663\n",
+      "Feature:  LOC | Importance:  0.052008967071320064\n",
+      "Feature:  SM6_L | Importance:  0.0524074184687339\n",
+      "Feature:  F03_CO | Importance:  0.035343463030889824\n",
+      "Feature:  nN_N | Importance:  0.05649352387372817\n",
+      "Feature:  nHDon | Importance:  0.06283164567733486\n",
+      "Feature:  nX | Importance:  0.041586306372976695\n"
      ]
     }
    ],
@@ -298,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'Psi_i_1d', 'C_026',\n",
-      "       'F02_CN', 'nHDon', 'nX'],\n",
+      "Index(['SdssC', 'LOC', 'SM6_L', 'F03_CO', 'nArNO2', 'B03', 'C_026', 'F02_CN',\n",
+      "       'nHDon', 'nX'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -337,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['F01', 'nCb', 'nO', 'F03', 'SdssC', 'LOC', 'F03_CO', 'nArNO2', 'N_073',\n",
+      "Index(['F01', 'NssssC', 'C', 'F03', 'SdssC', 'LOC', 'SM6_L', 'F03_CO', 'TI2_L',\n",
       "       'nHDon'],\n",
       "      dtype='object')\n"
      ]
@@ -371,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -380,8 +374,8 @@
      "text": [
       "[0, 10, 11, 13, 15, 18, 27, 33, 34, 38]\n",
       "[0, 7, 10, 11, 13, 14, 15, 18, 34, 40]\n",
-      "[11, 13, 14, 15, 19, 27, 32, 33, 34, 40]\n",
-      "[3, 6, 9, 10, 11, 13, 15, 19, 25, 34]\n"
+      "[11, 13, 14, 15, 19, 24, 32, 33, 34, 40]\n",
+      "[3, 5, 7, 10, 11, 13, 14, 15, 30, 34]\n"
      ]
     }
    ],
@@ -405,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,12 +421,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import classification metrics"
+    "Importar metricas de classificação"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,19 +451,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9656377402446127}\n",
+      "The best MCC we found was 0.7719 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x000001B313DF9F70>, 'f1Score': 0.9656377402446127}\n",
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.7711 with the hyperparameters {'neighbors': 12, 'weigths': 'distance', 'f1Score': 0.9665898617511521}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9680418361417781}\n",
+      "The best MCC we found was 0.7863 with the hyperparameters {'neighbors': 8, 'weigths': <function gaussian at 0x000001B313DF9F70>, 'f1Score': 0.9680418361417781}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.7364 with the hyperparameters {'neighbors': 4, 'weigths': <function gaussian at 0x0000017E2AB0AE50>, 'f1Score': 0.9612044006948466}\n",
+      "The best MCC we found was 0.8135 with the hyperparameters {'neighbors': 4, 'weigths': 'distance', 'f1Score': 0.9721577726218098}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.6470 with the hyperparameters {'neighbors': 2, 'weigths': 'uniform', 'f1Score': 0.9477351916376306}\n",
       "\n",
       "Confusion Matrix of best KNN model\n",
-      " [[123  37]\n",
-      " [ 41 808]]\n"
+      " [[131  29]\n",
+      " [ 31 818]]\n"
      ]
     }
    ],
@@ -526,13 +520,12 @@
     "print(\"\\nConfusion Matrix of best KNN model\\n\", bestKNNCM)\n",
     "\n",
     "            \n",
-    "\n",
-    "    # plt.plot(range(2, 20, 2), f1gauss, label=\"gaussian\")\n",
-    "    # plt.plot(range(2, 20, 2), f1distance, label=\"distance\")\n",
-    "    # plt.plot(range(2, 20, 2), f1noWei, label=\"no weights\")\n",
-    "    # plt.legend()\n",
-    "    # plt.grid()\n",
-    "    # plt.show()"
+    "# plt.plot(range(2, 20, 2), f1gauss, label=\"gaussian\")\n",
+    "# plt.plot(range(2, 20, 2), f1distance, label=\"distance\")\n",
+    "# plt.plot(range(2, 20, 2), f1noWei, label=\"no weights\")\n",
+    "# plt.legend()\n",
+    "# plt.grid()\n",
+    "# plt.show()"
    ]
   },
   {
@@ -545,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,19 +546,19 @@
      "output_type": "stream",
      "text": [
       "Feature selection method: Correlation\n",
-      "The best MCC we found was 0.6368 with the hyperparameters {'max_depth': 8, 'min_impurity_decrease': 0.05, 'f1Score': 0.9482163406214038}\n",
+      "The best MCC we found was 0.6309 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9477311889718552}\n",
       "Feature selection method: Random Forest\n",
-      "The best MCC we found was 0.6996 with the hyperparameters {'max_depth': 6, 'min_impurity_decrease': 0.05, 'f1Score': 0.9560185185185185}\n",
+      "The best MCC we found was 0.7084 with the hyperparameters {'max_depth': 4, 'min_impurity_decrease': 0.05, 'f1Score': 0.9556074766355139}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.6516 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9506314580941447}\n",
+      "The best MCC we found was 0.6619 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9516685845799769}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.5960 with the hyperparameters {'max_depth': 16, 'min_impurity_decrease': 0.05, 'f1Score': 0.9458850056369786}\n",
+      "The best MCC we found was 0.6518 with the hyperparameters {'max_depth': 10, 'min_impurity_decrease': 0.05, 'f1Score': 0.9515116942384484}\n",
       "Feature selection method: No Feature Selection\n",
-      "The best MCC we found was 0.6060 with the hyperparameters {'max_depth': 12, 'min_impurity_decrease': 0.05, 'f1Score': 0.9472502805836138}\n",
+      "The best MCC we found was 0.6134 with the hyperparameters {'max_depth': 14, 'min_impurity_decrease': 0.05, 'f1Score': 0.9480156512017887}\n",
       "\n",
       "Confusion Matrix of best RF model\n",
-      " [[107  53]\n",
-      " [ 24 825]]\n"
+      " [[100  60]\n",
+      " [ 25 824]]\n"
      ]
     }
    ],
@@ -624,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -636,15 +629,15 @@
       "Feature selection method: Random Forest\n",
       "The best MCC we found was 0.6984 with the hyperparameters {'n_estimators': 8, 'f1Score': 0.9523248969982343}\n",
       "Feature selection method: StepWise For\n",
-      "The best MCC we found was 0.7436 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9608416130917592}\n",
+      "The best MCC we found was 0.7452 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9632606199770379}\n",
       "Feature selection method: StepWise Back\n",
-      "The best MCC we found was 0.6231 with the hyperparameters {'n_estimators': 6, 'f1Score': 0.9398584905660379}\n",
+      "The best MCC we found was 0.6945 with the hyperparameters {'n_estimators': 2, 'f1Score': 0.9502958579881656}\n",
       "Feature selection method: No Feature Selection\n",
       "The best MCC we found was 0.7635 with the hyperparameters {'n_estimators': 4, 'f1Score': 0.9653579676674365}\n",
       "\n",
       "Confusion Matrix of best Bagging model\n",
-      " [[118  42]\n",
-      " [ 26 823]]\n"
+      " [[106  54]\n",
+      " [ 10 839]]\n"
      ]
     }
    ],
@@ -703,14 +696,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian Kernel: \n",
+      "Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian weight function: \n",
       "\n",
       "The MCC is:  0.8483190422946583\n",
       "The Confusion Matrix is: \n",
@@ -751,7 +744,7 @@
     "mcc = matthews_corrcoef(y_IVS, preds)\n",
     "cm = confusion_matrix(y_IVS, preds)\n",
     "\n",
-    "print(\"Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian Kernel: \\n\")\n",
+    "print(\"Our Selected Model is a KNN, where k=2, using features selected with a Backwards StepWise and a Gaussian weight function: \\n\")\n",
     "print(\"The MCC is: \", mcc)\n",
     "print(\"The Confusion Matrix is: \\n\", cm)"
    ]
@@ -773,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
